services/traefik/external/truenas/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: truenas
spec:
  ports:
    - name: https
      port: 443
